--- a/ESMF/GOCART_GridComp/DU_GridComp/MERRA2-DD/DU_GridComp---full.rc
+++ b/ESMF/GOCART_GridComp/DU_GridComp/MERRA2-DD/DU_GridComp---full.rc
@@ -11,12 +11,14 @@ radius_lower: 0.1 1.0 1.8 3.0 6.0
 
 radius_upper: 1.0 1.8 3.0 6.0 10.0
 
-source_fraction: 0.1 0.25 0.25 0.25 0.25
-
 soil_density: 2500. 2650. 2650. 2650. 2650.
 
-# Resolution dependent tuning constant for emissions (a,b,c,d,e,f)
-Ch_DU: 0.2 0.2 0.08 0.08 0.08 0.067
+# Emission scheme
+# ---------------
+emission_scheme: 1 # Ginoux
+source_fraction: 0.1 0.25 0.25 0.25 0.25
+Ch_DU: 0.2 0.2 0.08 0.08 0.08 0.067  # Resolution dependent tuning constant for emissions (a,b,c,d,e,f)
+# ---------------
 
 # Scavenging efficiency per bin [km-1]
 fscav: 0.2  0.2  0.2  0.2  0.2   #    
@@ -31,3 +33,17 @@ rhFlag: 0
 
 # Maring settling velocity correction
 maringFlag: 1
+
+# Threshold friction velocity parameter 'gamma'
+uts_gamma: 1.65e-4
+
+# Formulation of the clay and silt factor in K14 that modulates the strength of the dust emissions
+clayFlag: 1     # 0 - original K14, 1 - I&K2017, 2 - I&K2017
+
+# soil mosture scaling factor
+soil_moisture_factor: 0.8
+
+# clay fraction scaling factor
+soil_clay_factor: 1.0
+
+
