--- a/ESMF/GOCART_GridComp/NI_GridComp/NI_GridComp_ExtData.rc
+++ b/ESMF/GOCART_GridComp/NI_GridComp/NI_GridComp_ExtData.rc
@@ -10,7 +10,7 @@ PrimaryExports%%
 #  Name        | Units | Clim  | Method |     Time Template    | Factor | Factor |     File    | Template |
 # -------------|-------|-------|--------|----------------------|--------|--------|-------------|----------|
 # Nitrates
-EMI_NH3_BB          'kg m-2 s-1'         N        Y     %y4-%m2-%d2T12:00:00    none     none    biomass    ExtData/PIESA/sfc/QFED/NRT/v2.5r1_0.1_deg/Y%y4/M%m2/qfed2.emis_nh3.006.%y4%m2%d2.nc4
+EMI_NH3_BB          'kg m-2 s-1'         N        Y     %y4-%m2-%d2T12:00:00    none     0.778   biomass    ExtData/PIESA/sfc/QFED/NRT/v2.5r1_0.1_deg/Y%y4/M%m2/qfed2.emis_nh3.006.%y4%m2%d2.nc4
 
 EMI_NH3_AG          'kg m-2 s-1'         Y        Y     %y4-%m2-%d2T12:00:00    none     none    nh3_emis   ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_nh3.agriculture.x3600_y1800_t12.2010.nc4
 EMI_NH3_EN          'kg m-2 s-1'         Y        Y     %y4-%m2-%d2T12:00:00    none     none    nh3_emis   ExtData/PIESA/sfc/HTAP/v2.2/htap-v2.2.emis_nh3.energy.x3600_y1800_t12.2010.nc4
