--- a/ESMF/GOCART_GridComp/OC_GridComp/OC_GridComp---full.rc
+++ b/ESMF/GOCART_GridComp/OC_GridComp/OC_GridComp---full.rc
@@ -12,11 +12,12 @@ OC_regions_indices: global
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
 
-# Fraction of terpene emissions for SOA production
-terpene_emission_fraction: 0.1
+# Fraction of biogenic VOCs emissions for SOA production
+monoterpenes_emission_fraction: 0.05
+isoprene_emission_fraction:     0.03
 
 # Ratio of POM/OC -> convert source masses from carbon to POM
-pom_oc_ratio: 1.4
+pom_oc_ratio: 1.8
 
 # Initially hydrophobic portion
 hydrophobic_fraction: 0.5
