--- a/ESMF/GOCART_GridComp/SU_GridComp/SU_GridComp---full.rc
+++ b/ESMF/GOCART_GridComp/SU_GridComp/SU_GridComp---full.rc
@@ -11,7 +11,7 @@ SU_regions_indices: global
 
 
 # Volcanic pointwise sources
-volcano_srcfilen: ExtData/PIESA/sfc/volcanic_v7/so2_volcanic_emissions_Carns.%y4%m2%d2.rc
+volcano_srcfilen: ExtData/PIESA/sfc/volcanic_CARN_1978-2020_v202005/so2_volcanic_emissions_CARN_v202005.degassing_only.rc
 
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
