--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
@@ -8,14 +8,14 @@ category: IMPORT
      NAME   | UNITS  | DIMS | VLOC| COND | LONG NAME
 #----------------------------------------------------------------------------------------
  DU_SRC     | 1      | xy   | N   | scheme == 'ginoux'  | erod - dust emissions
+ DU_CLAY    | 1      | xy   | N   | scheme == 'fengsha' | volume_fraction_of_clay_in_soil
+ DU_SAND    | 1      | xy   | N   | scheme == 'fengsha' | volume_fraction_of_sand_in_soil
+ DU_SILT    | 1      | xy   | N   | scheme == 'fengsha' | volume_fraction_of_silt_in_soil
+ DU_RDRAG   | m-1    | xy   | N   | scheme == 'fengsha' | drag_partition
+ DU_SSM     | 1      | xy   | N   | scheme == 'fengsha' | sediment_supply_map
+ DU_UTHRES  | m s-1  | xy   | N   | scheme == 'fengsha' | surface_dry_threshold_velocity
  FRSNOW     | 1      | xy   | N   | scheme == 'fengsha' | surface_snow_area_fraction
  SLC        | 1      | xy   | N   | scheme == 'fengsha' | liquid_water_content_of_soil_layer
- FRCLAY     | 1      | xy   | N   | scheme == 'fengsha' | volume_fraction_of_clay_in_soil
- FRSAND     | 1      | xy   | N   | scheme == 'fengsha' | volume_fraction_of_sand_in_soil
- FRSILT     | 1      | xy   | N   | scheme == 'fengsha' | volume_fraction_of_silt_in_soil
- RDRAG      | m-1    | xy   | N   | scheme == 'fengsha' | drag_partition
- SSM        | 1      | xy   | N   | scheme == 'fengsha' | sediment_supply_map
- UTHRES     | m s-1  | xy   | N   | scheme == 'fengsha' | surface_dry_threshold_velocity
  WET1       | 1      | xy   | N   |      | surface_soil_wetness
  LWI        | 1      | xy   | N   |      | land-ocean-ice_mask
  FRLAKE     | 1      | xy   | N   |      | fraction_of_lake
