--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_GridComp_DU.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_GridComp_DU.rc
@@ -11,16 +11,35 @@ radius_lower: 0.1 1.0 1.8 3.0 6.0
 
 radius_upper: 1.0 1.8 3.0 6.0 10.0
 
-source_fraction: 0.1 0.25 0.25 0.25 0.25
-
 # units [kg/m-3]
 particle_density: 2500. 2650. 2650. 2650. 2650.
 
-# Resolution dependent tuning constant for emissions (a,b,c,d,e,f)
-Ch_DU: 0.2 0.2 0.07 0.07 0.07 0.056
+# Emission scheme
+# ---------------
+emission_scheme: 1 # Ginoux
+#source_fraction: 0.0435465   0.106903   0.220117   0.484606   0.144828
+#Ch_DU: 0.2 0.2 0.08 0.15 0.08 0.067  # resolution dependent tuning constant for emissions (a,b,c,d,e,f)
+Ch_DU: 0.2 0.2 0.07 0.07 0.07 0.056 #original values
+source_fraction: 0.1 0.25 0.25 0.25 0.25
+#----------------
+#emission_scheme: 2 # K14
+#source_fraction:  0.043 0.106 0.219 0.485 0.144
+#Ch_DU: 0.02 0.02 0.02 0.0161 0.015 0.015 # resolution dependent tuning constant for emissions (a,b,c,d,e,f)
+
+# Threshold friction velocity parameter 'gamma'
+uts_gamma: 1.65e-4
+
+# Formulation of the clay and silt factor in K14 that modulates the strength of the dust emissions
+clayFlag: 1     # 0 - original K14, 1 - I&K2017, 2 - I&K2017
+
+# soil mosture scaling factor
+soil_moisture_factor: 0.8
+
+# clay fraction scaling factor
+soil_clay_factor: 1.0
 
 # Scavenging efficiency per bin [km-1]
-fscav: 0.2  0.2  0.2  0.2  0.2   #
+fscav: 0.2  0.2  0.2  0.2  0.2
 
 # Molecular weight of species [kg mole-1]
 molecular_weight: 0.1  0.1  0.1  0.1  0.1
