--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
@@ -8,11 +8,22 @@ category: IMPORT
      NAME   | UNITS  | DIMS | VLOC| COND | LONG NAME
 #----------------------------------------------------------------------------------------
  DU_SRC     | 1      | xy   | N   |      | erod - dust emissions
+ DU_Z0      | 1      | xy   | N   |      | aerodynamic_surface_roughness_for_aeolian_processes
+ DU_GVF     | 1      | xy   | N   |      | GVF
+ DU_SAND    | 1      | xy   | N   |      | sand_fraction
+ DU_SILT    | 1      | xy   | N   |      | silt_fraction
+ DU_CLAY    | 1      | xy   | N   |      | clay_fraction
+ DU_TEXTURE | 1      | xy   | N   |      | soil_texture
+ DU_VEG     | 1      | xy   | N   |      | vegetation_type
  FRLAKE     | 1      | xy   | N   |      | fraction_of_lake
+ FRLAND     | 1      | xy   | N   |      | fraction_of_land
+ ASNOW      | 1      | xy   | N   |      | snow_covered_fraction_of_land
  WET1       | 1      | xy   | N   |      | surface_soil_wetness
  LWI        | 1      | xy   | N   |      | land-ocean-ice_mask
  U10M       | m s-1  | xy   | N   |      | 10-meter_eastward_wind
  V10M       | m s-1  | xy   | N   |      | 10-meter_northward_wind
+ U10N       | m s-1  | xy   | N   |      | equivalent_neutral_10-meter_eastward_wind
+ V10N       | m s-1  | xy   | N   |      | equivalent_neutral_10-meter_northward_wind
  AREA       | m^2    | xy   | N   |      | agrid_cell_area
  USTAR      | m s-1  | xy   | N   |      | equivalent_neutral_10-meter_northward_wind
  CN_PRCP    |kg/m^2/s| xy   | N   |      | surface_conv._rain_flux_needed_by_land
@@ -20,6 +31,9 @@ category: IMPORT
  ZPBL       | m      | xy   | N   |      | planetary_boundary_layer_height
  SH         | w m-2  | xy   | N   |      | sensible_heat_flux_from_turbulence
  Z0H        | m      | xy   | N   |      | surface_roughness_for_heat
+ WCSF       | m3 m-3 | xy   | N   |      | water_surface_layer
+ TSOIL1     | K      | xy   | N   |      | soil_temperatures_layer_1
+ RHOS       | kg m-3 | xy   | N   |      | air_density_at_surface
 #........................................................................................
  AIRDENS    | kg/m^3 | xyz  | C   |      | moist_air_density
  DELP       | Pa     | xyz  | C   |      | pressure_thickness
@@ -63,6 +77,12 @@ category: EXPORT
  DUDP       | kg m-2 s-1 | xy  | N  | self%nbins               | Dust Dry Deposition (Bin %d)
  DUWT       | kg m-2 s-1 | xy  | N  | self%nbins               | Dust Wet Deposition (Bin %d)
  DUSV       | kg m-2 s-1 | xy  | N  | self%nbins               | Dust Convective Scavenging (Bin %d)
+ DU_UST     | 1          | xy  | N  |            | aeolian_friction_velocity
+ DU_UST_T   | 1          | xy  | N  |            | aeolian_threshold_friction_velocity
+ DU_UST_TS  | 1          | xy  | N  |            | aeolian_threshold_friction_velocity_over_smooth_surface
+ DU_DPC     | 1          | xy  | N  |            | aeolian_drag_partition_correction
+ DU_SMC     | 1          | xy  | N  |            | aeolian_soil_moisture_correction
+ DU_EROD    | 1          | xy  | N  |            | aeolian_erodibilitiy
 
 
 category: INTERNAL
