--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/MERRA2/CA2G_GridComp_CA.br.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/MERRA2/CA2G_GridComp_CA.br.rc
@@ -2,13 +2,8 @@
 # Resource file for BR parameters.
 #
 
-
 aerosol_radBands_optics_file: ExtData/MERRA2/x/opticsBands_BRC.v1_5.RRTMG.nc
-
 aerosol_monochromatic_optics_file: ExtData/AeroCom/x/optics_BRC.v1_5.nc
-aerosol_monochromatic_optics_wavelength: 470 550 670 870 ! units: nm
-n_channels: 4
-r_channels: 4.7e-7 5.5e-7 6.7e-7 8.7e-7
 
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
@@ -17,7 +12,7 @@ aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
 terpene_emission_fraction: 0.1
 
 # Ratio of POM/BRC -> convert source masses from carbon to POM
-pom_brc_ratio: 1.4
+pom_brc_ratio: 1.8
 
 # Initially hydrophobic portion
 hydrophobic_fraction: 0.5
@@ -26,7 +21,7 @@ hydrophobic_fraction: 0.5
 fscav: 0.0  0.4
 
 # particle radius
-particle_radius_microns: 0.0212  0.0212
+particle_radius_microns: 0.35 0.35
 
 rhFlag: 0
 
@@ -41,5 +36,7 @@ fnum: 9.76e17  9.76e17
 
 # Sigma of lognormal number distribution
 sigma: 2.20  2.20
+
+pressure_lid_in_hPa: 0.01
 
 nbins: 2
