--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/CMIP/SU2G_GridComp_SU.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/CMIP/SU2G_GridComp_SU.rc
@@ -3,15 +3,12 @@
 #
 
 aerosol_radBands_optics_file: ExtData/MERRA2/x/opticsBands_SU.v1_3.RRTMG.nc
-
 aerosol_monochromatic_optics_file: ExtData/AeroCom/x/optics_SU.v1_3.nc
-aerosol_monochromatic_optics_wavelength: 4.7e-7 5.5e-7 6.7e-7 8.7e-7
-n_channels: 4
 
 nbins: 4
 
 # Volcanic pointwise sources
-volcano_srcfilen: ExtData/PIESA/sfc/volcanic_v7/so2_volcanic_emissions_Carns.%y4%m2%d2.rc
+volcano_srcfilen: ExtData/PIESA/sfc/volcanic_CARN_1978-2020_v202005/so2_volcanic_emissions_CARN_v202005.degassing_only.rc
 
 # Heights [m] of LTO, CDS and CRS aviation emissions layers
 aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
