--- a/ESMF/UFS/CMakeLists.txt
+++ b/ESMF/UFS/CMakeLists.txt
@@ -3,6 +3,7 @@ esma_set_this ()
 set (srcs
   Aerosol_Cap.F90
   Aerosol_Comp_Mod.F90
+  Aerosol_Internal_Mod.F90
   )
 
 set (dependencies Aerosol_GridComp MAPL esmf)
