Move generic methods and physical constants to new shared Fortran module.

--- a/ESMF/UFS/CMakeLists.txt
+++ b/ESMF/UFS/CMakeLists.txt
@@ -4,6 +4,7 @@ set (srcs
   Aerosol_Cap.F90
   Aerosol_Comp_Mod.F90
   Aerosol_Internal_Mod.F90
+  Aerosol_Shared_Mod.F90
   )
 
 set (dependencies Aerosol_GridComp MAPL esmf)
