Reimplement computation of diagnostic PM based on dynamic tracer mapping.

--- a/ESMF/UFS/CMakeLists.txt
+++ b/ESMF/UFS/CMakeLists.txt
@@ -3,6 +3,7 @@ esma_set_this ()
 set (srcs
   Aerosol_Cap.F90
   Aerosol_Comp_Mod.F90
+  Aerosol_Diag_Mod.F90
   Aerosol_Internal_Mod.F90
   Aerosol_Shared_Mod.F90
   Aerosol_Tracer_Mod.F90
