Add logger to UFS aerosol component and output progress messages.

--- a/ESMF/UFS/CMakeLists.txt
+++ b/ESMF/UFS/CMakeLists.txt
@@ -5,6 +5,7 @@ set (srcs
   Aerosol_Comp_Mod.F90
   Aerosol_Diag_Mod.F90
   Aerosol_Internal_Mod.F90
+  Aerosol_Logger_Mod.F90
   Aerosol_Shared_Mod.F90
   Aerosol_Tracer_Mod.F90
   )
