Replace build flag BUILD_UFS with UFS_GOCART for integration with the UFS weather model build system.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -22,14 +22,14 @@ if (NOT CMAKE_BUILD_TYPE)
 endif ()
 
 # Set build options
-option (BUILD_UFS "Build GOCART component for UFS" OFF)
+option (UFS_GOCART "Build GOCART component for UFS" OFF)
 
 set (DOING_GEOS5 YES)
 
 # Should find a better place for this - used in Chem component
 set (ACG_FLAGS -v)
 
-if (BUILD_UFS)
+if (UFS_GOCART)
 # Ensure we build as 32-bit
   message ("Force 32-bit build for GOCART")
   if (CMAKE_Fortran_COMPILER_ID MATCHES "Intel")
@@ -63,7 +63,7 @@ if (NOT Baselibs_FOUND)
   find_package (YAFYAML REQUIRED)
 endif ()
 
-if (BUILD_UFS)
+if (UFS_GOCART)
   find_package (MAPL REQUIRED)
   include(mapl_acg)
 elseif (IS_DIRECTORY "${PROJECT_SOURCE_DIR}/ESMF/Shared/MAPL@")
