--- a/ESMF/CMakeLists.txt
+++ b/ESMF/CMakeLists.txt
@@ -2,7 +2,7 @@ set (HEMCO_EXTERNAL_CONFIG TRUE)
 set (MAPL_ESMF TRUE)
 set (BUILD_GEOS_INTERFACE TRUE)
 
-if (BUILD_UFS)
+if (UFS_GOCART)
   esma_add_subdirectories(
     Aerosol_GridComp
     GOCART2G_GridComp
