--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -60,7 +60,7 @@ if (NOT Baselibs_FOUND)
 
   find_package (GFTL REQUIRED)
   find_package (GFTL_SHARED REQUIRED)
-  find_package (PFLOGGER REQUIRED)
+  find_package (PFLOGGER QUIET)
   find_package (YAFYAML REQUIRED)
 endif ()
 
