--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.br.rc
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CA2G_instance_CA.br.rc
@@ -12,7 +12,7 @@ aviation_vertical_layers: 0.0 100.0 9.0e3 10.0e3
 terpene_emission_fraction: 0.1
 
 # Ratio of POM/BRC -> convert source masses from carbon to POM
-pom_brc_ratio: 1.8
+pom_ca_ratio: 1.8
 
 # Initially hydrophobic portion
 hydrophobic_fraction: 0.5
