prc: incorporate Sampa stratospheric AOD, StratChem->GOCART2G coupling

--- a/ESMF/Aerosol_GridComp/Aerosol_StateSpecs.rc
+++ b/ESMF/Aerosol_GridComp/Aerosol_StateSpecs.rc
@@ -12,6 +12,7 @@ category: IMPORT
 #FRLAKE     | 1      | xy   | N   |      | fraction_of_lake
 #WET1       | 1      | xy   | N   |      | surface_soil_wetness
 #LWI        | 1      | xy   | N   |      | land-ocean-ice_mask
+#TROPP      | Pa     | xy   | N   |      | tropopause_pressure_based_on_blended_estimate
 #U10M       | m s-1  | xy   | N   |      | 10-meter_eastward_wind
 #V10M       | m s-1  | xy   | N   |      | 10-meter_northward_wind
 #AREA       | m^2    | xy   | N   |      | agrid_cell_area
