--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/DU2G_StateSpecs.rc
@@ -20,6 +20,7 @@ category: IMPORT
  ASNOW      | 1      | xy   | N   |      | snow_covered_fraction_of_land
  WET1       | 1      | xy   | N   |      | surface_soil_wetness
  LWI        | 1      | xy   | N   |      | land-ocean-ice_mask
+ TROPP      | Pa     | xy   | N   |      | tropopause_pressure_based_on_blended_estimate
  U10M       | m s-1  | xy   | N   |      | 10-meter_eastward_wind
  V10M       | m s-1  | xy   | N   |      | 10-meter_northward_wind
  U10N       | m s-1  | xy   | N   |      | equivalent_neutral_10-meter_eastward_wind
@@ -61,7 +62,9 @@ category: EXPORT
  DUSMASS    | kg m-3     | xy  | N  |                          | Dust Surface Mass Concentration
  DUCMASS    | kg m-2     | xy  | N  |                          | Dust Column Mass Density
  DUEXTTAU   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Extinction AOT 
- DUSCATAU   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Scattering AOT
+ DUSTEXTTAU |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Extinction AOT Stratosphere 
+ DUSCATAU   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Scattering AOT 
+ DUSTSCATAU |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Scattering AOT Stratosphere
  DUSMASS25  | kg m-3     | xy  | N  |                          | Dust Surface Mass Concentration - PM 2.5
  DUCMASS25  | kg m-2     | xy  | N  |                          | Dust Column Mass Density - PM 2.5
  DUEXTT25   |    1       | xy  | N  | size(self%wavelengths_vertint) | Dust Extinction AOT - PM 2.5
