--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
@@ -7,6 +7,10 @@ if (OMP)
   target_link_libraries(${this} PRIVATE OpenMP::OpenMP_Fortran)
 endif()
 
+if (OMP)                                                                               
+   target_link_libraries (${this} PRIVATE OpenMP::OpenMP_Fortran)                     
+endif()              
+
 mapl_acg (${this}   DU2G_StateSpecs.rc 
           IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS 
           GET_POINTERS DECLARE_POINTERS)
