--- a/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
+++ b/ESMF/GOCART2G_GridComp/GOCART2G_GridComp.rc
@@ -36,7 +36,7 @@ PASSIVE_INSTANCES_NI:
 
 # Set optics parameters
 # ---------------------
-aerosol_monochromatic_optics_wavelength: 470 550 670 870 # units:nm
+aerosol_monochromatic_optics_wavelength_in_nm: 470 550 670 870
 
 wavelengths_for_profile_aop_in_nm: 470 550 870
 wavelengths_for_vertically_integrated_aop_in_nm: 470 550 670 870
