--- a/ESMF/GOCART2G_GridComp/NI2G_GridComp/CMIP/NI2G_GridComp_NI.rc
+++ b/ESMF/GOCART2G_GridComp/NI2G_GridComp/CMIP/NI2G_GridComp_NI.rc
@@ -7,7 +7,7 @@ nbins: 5
 aerosol_radBands_optics_file: ExtData/MERRA2/x/opticsBands_NI.v2_5.RRTMG.nc
 
 aerosol_monochromatic_optics_file: ExtData/AeroCom/x/optics_NI.v2_5.nc
-aerosol_monochromatic_optics_wavelength: 4.7e-7 5.5e-7 6.7e-7 8.7e-7
+aerosol_monochromatic_optics_wavelength_in_nm: 470 550 670 870
 n_channels: 4
 
 # Scavenging efficiency per bin [km-1]
