--- a/ESMF/GOCART2G_GridComp/SU2G_GridComp/MERRA2/SU2G_GridComp_SU.rc
+++ b/ESMF/GOCART2G_GridComp/SU2G_GridComp/MERRA2/SU2G_GridComp_SU.rc
@@ -5,7 +5,7 @@
 aerosol_radBands_optics_file: ExtData/MERRA2/x/opticsBands_SU.v1_3.RRTMG.nc
 
 aerosol_monochromatic_optics_file: ExtData/AeroCom/x/optics_SU.v1_3.nc
-aerosol_monochromatic_optics_wavelength: 4.7e-7 5.5e-7 6.7e-7 8.7e-7
+aerosol_monochromatic_optics_wavelength_in_nm: 470 550 670 870
 n_channels: 4
 
 nbins: 4
