Improvements to thread safety.
A number of issues have been addressed to enable GOCART children
to be threadsafe under OpenMP.

--- a/ESMF/GOCART2G_GridComp/CA2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/CA2G_GridComp/CMakeLists.txt
@@ -4,6 +4,10 @@ esma_add_library (${this}
   SRCS ${this}Mod.F90
   DEPENDENCIES MAPL GA_Environment Chem_Shared2G Process_Library esmf NetCDF::NetCDF_Fortran)
 
+if (OMP) 
+  target_link_libraries(${this} PRIVATE OpenMP::OpenMP_Fortran)
+endif()
+
 mapl_acg (${this}   CA2G_StateSpecs.rc 
           IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS 
           GET_POINTERS DECLARE_POINTERS)
