--- a/ESMF/GOCART2G_GridComp/GA_Environment/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/GA_Environment/CMakeLists.txt
@@ -4,3 +4,6 @@ esma_add_library (${this}
   SRCS ${this}Mod.F90
   DEPENDENCIES MAPL Chem_Shared2G Process_Library
   )
+if (OMP) 
+  target_link_libraries(${this} PRIVATE OpenMP::OpenMP_Fortran)
+endif()
