--- a/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
+++ b/ESMF/GOCART2G_GridComp/DU2G_GridComp/CMakeLists.txt
@@ -3,6 +3,9 @@ esma_set_this ()
 esma_add_library (${this}
   SRCS ${this}Mod.F90
   DEPENDENCIES GA_Environment MAPL Chem_Shared2G Process_Library esmf NetCDF::NetCDF_Fortran)
+if (OMP) 
+  target_link_libraries(${this} PRIVATE OpenMP::OpenMP_Fortran)
+endif()
 
 mapl_acg (${this}   DU2G_StateSpecs.rc 
           IMPORT_SPECS EXPORT_SPECS INTERNAL_SPECS 
